--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview",
-    "docs:deploy": "firebase deploy --only hosting"
+    "docs:deploy": "npm run docs:build && firebase deploy --only hosting"
   },
   "author": "",
   "license": "ISC",
